--- a/desktop-app/src/Shared/SistemaVendas.Communication/SistemaVendas.Communication.csproj
+++ b/desktop-app/src/Shared/SistemaVendas.Communication/SistemaVendas.Communication.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Repository\" />
+    <Folder Include="Response\" />
   </ItemGroup>
 
 </Project>
