--- a/desktop-app/src/SistemaVendas.Infrastructure/SistemaVendas.Infrastructure.csproj
+++ b/desktop-app/src/SistemaVendas.Infrastructure/SistemaVendas.Infrastructure.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\SistemaVendas.Exceptions\SistemaVendas.Exceptions.csproj" />
+    <ProjectReference Include="..\SistemaVendas.Domain\SistemaVendas.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+  </ItemGroup>
+
 </Project>
