--- a/desktop-app/src/Shared/SistemaVendas.Communication/SistemaVendas.Communication.csproj
+++ b/desktop-app/src/Shared/SistemaVendas.Communication/SistemaVendas.Communication.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Response\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
