--- a/desktop-app/src/SistemaVendas.Application/SistemaVendas.Application.csproj
+++ b/desktop-app/src/SistemaVendas.Application/SistemaVendas.Application.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Shared\SistemaVendas.Communication\SistemaVendas.Communication.csproj" />
+    <ProjectReference Include="..\Shared\SistemaVendas.Exceptions\SistemaVendas.Exceptions.csproj" />
     <ProjectReference Include="..\SistemaVendas.Domain\SistemaVendas.Domain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Validation\" />
-    <Folder Include="Service\" />
   </ItemGroup>
 
   <ItemGroup>
