--- a/desktop-app/src/SistemaVendas.Domain/SistemaVendas.Domain.csproj
+++ b/desktop-app/src/SistemaVendas.Domain/SistemaVendas.Domain.csproj
@@ -7,8 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interface\" />
-    <Folder Include="Repository\" />
+    <PackageReference Include="Npgsql" Version="8.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\SistemaVendas.Communication\SistemaVendas.Communication.csproj" />
+    <ProjectReference Include="..\Shared\SistemaVendas.Exceptions\SistemaVendas.Exceptions.csproj" />
   </ItemGroup>
 
 </Project>
