--- a/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
+++ b/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
@@ -18,4 +18,33 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\SistemaVendas.Communication\SistemaVendas.Communication.csproj" />
+    <ProjectReference Include="..\Shared\SistemaVendas.Exceptions\SistemaVendas.Exceptions.csproj" />
+    <ProjectReference Include="..\SistemaVendas.Application\SistemaVendas.Application.csproj" />
+    <ProjectReference Include="..\SistemaVendas.Infrastructure\SistemaVendas.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
