--- a/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
+++ b/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
@@ -38,6 +38,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="FormProduto.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
