--- a/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
+++ b/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
@@ -33,6 +33,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="FormVenda.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
