--- a/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
+++ b/desktop-app/src/SistemaVendas.Froms/SistemaVendas.Froms.csproj
@@ -19,10 +19,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Relatorio\RelatorioVendas.rdlc" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="ReportViewerCore.WinForms" Version="15.1.29" />
   </ItemGroup>
 
   <ItemGroup>
