--- a/desktop-app/src/SistemaVendas.Infrastructure/SistemaVendas.Infrastructure.csproj
+++ b/desktop-app/src/SistemaVendas.Infrastructure/SistemaVendas.Infrastructure.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
 </Project>
